--- a/index.html
+++ b/index.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Blog MYT</title>
-  <link rel="stylesheet" href="./css/styles.css">
-  <link rel="icon" href="./images/faviconMe.png" type="image/*">
-</head>
-<body>
-  
-  <div>
-    <h1>I'm Miguel Yann TSAMBA</h1>
-    <p>Developer</p>
-  </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Blog MYT</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="icon" href="./images/faviconMe.png" type="image/*" />
+  </head>
+  <body>
+    <div class="top-container">
+      <img class="top-img-cloud" src="./images/cloud.png" alt="cloud" />
+      <h1>I'm Miguel Yann Tsamba</h1>
+      <p class="profession">Developer</p>
+      <img class="bottom-img-cloud" src="./images/cloud.png" alt="cloud" />
+      <img src="./images/mountain.png" alt="mountain" />
+    </div>
+  </body>
 </html>
