Resize logo cloud

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
       <img id="logo-java"" src="./images/js.png" alt="java-logo" srcset="">
       <h1>I'm Miguel Yann Tsamba</h1>
       <p class="profession">Developer</p>
-      <img id="logo-js" src="./images/cloud.png" alt="js" />
-
+      <img id="logo-cloud" src="./images/cloud.png" alt="logo-clouding" />
     </div>
 
     <div class="middle-container">
@@ -34,7 +33,11 @@
       <div class="skill-row">
         <h2>My Professional Experience.</h2>
         <div class="skill-row">
-          <img class="image-row" src="./images/worker.png" alt="experience-pro" />
+          <img
+            class="image-row"
+            src="./images/worker.png"
+            alt="experience-pro"
+          />
           <h3>Lorem & Ipsum</h3>
           <p>
             Lorem ipsum dolor sit amet, quis in duis, iaculis id felis.
