Add docker and azure icons

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
   <body>
     <div class="top-container">
       <img id="logo-java"" src="./images/java.png" alt="java-logo" srcset="">
-      <img class="top-img-cloud" src="./images/cloud.png" alt="cloud" />
+      <img class="top-img-cloud" src="./images/azure.png" alt="cloud" />
       <img id="logo-java"" src="./images/js.png" alt="java-logo" srcset="">
       <h1>I'm Miguel Yann Tsamba</h1>
       <p class="profession">Developer</p>
-      <img id="logo-cloud" src="./images/cloud.png" alt="logo-clouding" />
+      <img id="logo-cloud" src="./images/docker.png" alt="logo-clouding" />
     </div>
 
     <div class="middle-container">
