Improve CSS properties for better accessibiity

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <img class="top-img-cloud" src="./images/azure.png" alt="cloud" />
       <img id="logo-java"" src="./images/js.png" alt="java-logo" srcset="">
       <h1>I'm Miguel Yann Tsamba</h1>
-      <p class="profession">Developer</p>
+      <h2 class="profession">Developer</h2>
       <img id="logo-cloud" src="./images/docker.png" alt="logo-clouding" />
     </div>
 
