Add Github, linkedin and twitter account links

--- a/index.html
+++ b/index.html
@@ -69,9 +69,35 @@
     </div>
 
     <div class="bottom-container">
-      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-      <a class="footer-link" href="https://twitter.com/">Twitter</a>
-      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <a
+        class="footer-link"
+        href="https://www.linkedin.com/in/miguel-yann-tsamba-67bb30148/"
+        target="_blank"
+      >
+        <img
+          class="logo-social-media"
+          src="./images/linkedin.png"
+          alt="linkedin-logo"
+        />
+      </a>
+      <a class="footer-link" href="https://twitter.com/YannTsamba" target="_blank">
+        <img
+          class="logo-social-media"
+          src="./images/twitter.png"
+          alt="twitter-logo"
+        />
+      </a>
+      <a
+        class="footer-link"
+        href="https://github.com/MiguelYann"
+        target="_blank"
+      >
+        <img
+          class="logo-social-media"
+          src="./images/github.png"
+          alt="github-logo"
+        />
+      </a>
       <p>© 2020 Miguel Yann TS.</p>
     </div>
   </body>
