Add gmail link and change name of profession

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <img class="top-img-cloud" src="./images/azure.png" alt="cloud" />
       <img id="logo-java"" src="./images/js.png" alt="java-logo" srcset="">
       <h1>I'm Miguel Yann Tsamba</h1>
-      <h2 class="profession">Developer</h2>
+      <h2 class="profession">Software Engineer</h2>
       <img id="logo-cloud" src="./images/docker.png" alt="logo-clouding" />
     </div>
 
@@ -57,7 +57,7 @@
         </div>
       </div>
       <hr />
-      <div class="contact-me">
+      <!-- <div class="contact-me">
         <h2>Get In Touch</h2>
         <h3>Lorem ipsum dolor sit amet, non elit.</h3>
         <p>
@@ -65,7 +65,7 @@
           tellus donec dui, ornare erat.
         </p>
         <a class="btn" href="mailto:tsambamiguelito@gmail.com">CONTACT ME</a>
-      </div>
+      </div> -->
     </div>
 
     <div class="bottom-container">
@@ -96,6 +96,17 @@
           class="logo-social-media"
           src="./images/github.png"
           alt="github-logo"
+        />
+      </a>
+      <a
+        class="footer-link"
+        href="mailto:tsambamiguelito@gmail.com""
+        target="_blank"
+      >
+        <img
+          class="logo-social-media"
+          src="./images/gmail.png"
+          alt="gmail-logo"
         />
       </a>
       <p>© 2020 Miguel Yann TS.</p>
