--- a/index.html
+++ b/index.html
@@ -26,35 +26,39 @@
         <div>
           <img id="img-me" src="./images/me.png" alt="image-me" />
         </div>
-        <h2>Hello.</h2>
+        <h2>Hello 😊</h2>
         <p>I love to build web and mobile apps. Music is part of me 😍</p>
       </div>
       <hr />
-      <div class="skill-row">
-        <h2>My Professional Experience.</h2>
+        <div class="skills">
+          <h2>My Journey.</h2>
+
         <div class="skill-row">
           <img
-            class="image-row"
-            src="./images/worker.png"
+            class="image-row-experience"
+            src="./images/teamwork.png"
             alt="experience-pro"
           />
-          <h3>Lorem & Ipsum</h3>
+          <h3>Professional Experience</h3>
           <p>
             Lorem ipsum dolor sit amet, quis in duis, iaculis id felis.
             Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit
             nam, lectus ante, ut lorem eros.
           </p>
         </div>
-        <div class="skill-row">
-          <img class="image-row" src="./images/code.png" alt="coding-skills" />
 
-          <h3>Lorem Ipsum Dolor</h3>
-          <p>
+        <div class="skill-row">
+          <img class="image-row-projects" src="./images/code.png" alt="coding-skills" />
+
+          <h3>Side Projects</h3>
+          <p class="paragraph-professional-description">
             Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu,
             bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel
             eu, rutrum nam.
           </p>
         </div>
+
+
       </div>
       <hr />
       <!-- <div class="contact-me">
