Change text with emoji

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <img id="img-me" src="./images/me.png" alt="image-me" />
         </div>
         <h2>Hello 😊</h2>
-        <p>I love to build web and mobile apps. Music is part of me 😍</p>
+        <p>I love to build web and mobile apps. 🎵 is part of me, and fan of 🏀</p>
       </div>
       <hr />
         <div class="skills">
