--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <img class="top-img-cloud" src="./images/azure.png" alt="cloud" />
       <img id="logo-java"" src="./images/js.png" alt="java-logo" srcset="">
       <h1>I'm Miguel Yann Tsamba</h1>
-      <h2 class="profession">Software Engineer</h2>
+      <h2 class="profession"><span id="curly-brace-open">| </span>Developer<span id="curly-brace-close"> |</span></h2>
       <img id="logo-cloud" src="./images/docker.png" alt="logo-clouding" />
     </div>
 
@@ -113,7 +113,7 @@
           alt="gmail-logo"
         />
       </a>
-      <p>© 2020 Miguel Yann TS.</p>
+      <p id="text-copyright">© 2020 Miguel Yann TS.</p>
     </div>
   </body>
 </html>
