add languages details on github

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blog MYT</title>
     <link rel="stylesheet" href="./css/styles.css" />
+    
     <link
       href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap"
       rel="stylesheet"
@@ -49,13 +50,13 @@
 
         <div class="skill-row">
           <img class="image-row-projects" src="./images/code.png" alt="coding-skills" />
+          <h3>On Github</h3>
+          <a href=""><p class="most">Go to my Github</p></a>
 
-          <h3>Side Projects</h3>
-          <p class="paragraph-professional-description">
-            Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu,
-            bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel
-            eu, rutrum nam.
-          </p>
+          <div class="paragraph-professional-description">
+            <a href=""><img src=https://github-readme-stats.vercel.app/api/top-langs/?username=MiguelYann></a>      
+              </div>
+
         </div>
 
 
