Add enterprise icons

--- a/index.html
+++ b/index.html
@@ -41,17 +41,26 @@
             alt="experience-pro"
           />
           <h3>Professional Experience</h3>
-          <p>
-            Lorem ipsum dolor sit amet, quis in duis, iaculis id felis.
-            Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit
-            nam, lectus ante, ut lorem eros.
-          </p>
+          <div id="xx" >
+           <a href="https://www.sncf.com/fr/groupe/newsroom/e-voyageurs-sncf" target="_blank">
+            <img class="kaibee"  src="https://media-exp1.licdn.com/dms/image/C560BAQE6HMXVf86EZA/company-logo_200_200/0?e=2159024400&v=beta&t=gaQvv50lmfXALZGrXKJTrpDrG0vVMqg8VafCBW9l1O8" alt="" srcset="">
+
+           </a> 
+           
+           <a href="https://kaibee.fr/" target="_blank">
+            <img  class="kaibee"src="./images/kaibee.png" alt="">
+           </a>
+
+           <a href="https://www.smartteem.com/" target="_blank">
+            <img class="kaibee" src="https://media-exp1.licdn.com/dms/image/C4D0BAQHmCmiRasWiBQ/company-logo_200_200/0?e=2159024400&v=beta&t=LQXNFxaYjium1TU-RBbnSgaa02gK6FIWvQt0tC325xc" alt="" srcset="">
+
+           </a>
+          </div>
         </div>
 
         <div class="skill-row">
           <img class="image-row-projects" src="./images/code.png" alt="coding-skills" />
           <h3>On Github</h3>
-          <a href=""><p class="most">Go to my Github</p></a>
 
           <div class="paragraph-professional-description">
             <a href=""><img src=https://github-readme-stats.vercel.app/api/top-langs/?username=MiguelYann></a>      
