(ui)Add logo of lcl enterprise on profesional experience

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
           <h3>Professional Experience</h3>
           <div id="xx" >
          
+            <a href="https://lcl.fr/" target="_blank">
+              <img  class="lcl"src="./images/lcl.png" alt="">
+             </a>
        
            <a href="https://kaibee.fr/" target="_blank">
             <img  class="kaibee"src="./images/kaibee.png" alt="">
