--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       </a>
       <a
         class="footer-link"
-        href="mailto:tsambamiguelito@gmail.com""
+        href="mailto:miguelyann.tsamba@outlook.fr""
         target="_blank"
       >
         <img
