--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="./images/faviconMe.png" type="image/*" />
+    <link rel="icon" href="./images/me.png" type="image/*" />
   </head>
   <body>
     <div class="top-container">
